# active-learning

./: pyproject.toml  requirements.txt
src/active_learning/: active_learning.py  docking.py  evaluating.py  modeling.py  predict.sh  sampling.py  scoring.py  topping.py  train.sh
